Revert "BUG - Sidebar Styling issue with Fieldset"

--- a/application/web/style/sidebar.css
+++ b/application/web/style/sidebar.css
@@ -37,13 +37,14 @@ sidebar {
 }
 
 .sidebar-module::-webkit-scrollbar {
-    width: 0px;
+    width: 0px; 
 }
 
 /* journal */
 .journal {
     color: var(--grey-text-color);
     position: relative;
+    overflow: visible;
     border-radius: 5px;
     width: 100%;
     box-sizing: border-box;
@@ -51,33 +52,37 @@ sidebar {
     justify-content: space-between;
     align-items: center;
     font-size: 16px;
-    min-height: 50px;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    padding: 10px;
-    cursor: pointer;
+    min-height: 40px;
+    margin-bottom: 10px;
 
-    button {
-        background-color: transparent;
-        display: none;
-        height: auto;
-    }
-
-    &:hover {
+    &:hover{
         background-color: var(--journal-highlight);
-
-        button {
+        button{
+            background-color: #cbcfce;
             display: block;
             border: none;
-            cursor: pointer;
         }
     }
+    span {
+        margin-left: 10px;
+    }
 
+    button{
+        background-color: var(--sliding-shelf);
+        display:none;
+    }
+    
     input[type='radio'] {
         display: none;
     }
+    
+    label {
+        height: 100%;
+        cursor: pointer;
+    }
 
     .journal-vdots:hover {
+        display: block;
         content: url('../assets/vdots-journal-white-active.svg');
     }
 }
@@ -107,11 +112,11 @@ sidebar {
     display: flex;
     align-items: center;
     cursor: pointer;
-}
 
-.sidebar-dropdown-item:hover {
-    background-color: var(--icon-color);
-    border-radius: 5px;
+    :hover {
+        background-color: var(--icon-color);
+        border-radius: 5px;
+    }
 }
 
 .dropdown-icon {
@@ -120,12 +125,10 @@ sidebar {
 
 .sidebar-dropdown-item.delete {
     color: red;
+    :hover {
+        background-color: #f8d7da;
+    }
 }
-
-.sidebar-dropdown-item.delete:hover {
-    background-color: #f8d7da;
-}
-
 
 /* new journal button */
 button.new-journal {
@@ -133,6 +136,7 @@ button.new-journal {
     color: white;
     border: none;
     border-radius: 5px;
+    margin-bottom: 10px;
     padding: 10px;
     width: 100%;
     box-sizing: border-box;
@@ -141,7 +145,7 @@ button.new-journal {
     align-items: center;
     cursor: pointer;
     font-size: 16px;
-    min-height: 50px;
+    min-height: 40px;
 }
 
 button.collapse-button {
@@ -160,6 +164,25 @@ button.collapse-button {
 
 button.new-journal i.icon {
     margin-left: 10px;
+}
+
+.journal {
+    background-color: var(white);
+    color: var(--dark-green);
+    border-color: var(--dark-green);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    font-size: 16px;
+    min-height: 40px;
 }
 
 button.new-journal img.journal-icon,
@@ -181,7 +204,7 @@ img.collapse-button {
 }
 
 .toggled-new-journal,
-.toggled-journal {
+.toggled-journal-entry {
     transition: width 0.3s ease;
     visibility: hidden;
 }
