--- a/application/web/style/entry.css
+++ b/application/web/style/entry.css
@@ -74,7 +74,7 @@
     justify-content: space-between;
 }
 
-#no-entry-text, .no-entry-text {
+#no-entry-text {
     display: block;
     margin-top: 10px;
     font-size: 24px;
@@ -151,7 +151,7 @@
     background-color: var(--sliding-shelf);
     margin: 15% auto;
     padding: 20px;
-    min-width: 249px;
+    min-width: 200px;
     width: 13%;
     height: 12%;
     border-radius: 8px;
