--- a/application/web/style/homepage.css
+++ b/application/web/style/homepage.css
@@ -59,3 +59,42 @@ button.add-note:hover {
     z-index: 1000;
     font-family: 'Inter', sans-serif;
 }
+
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    width: 200px;
+    z-index: 1000;
+    left: 80px;
+    background-color: var(--journal-entry);
+    border: 1px solid var(--icon-color);
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+    margin-top: 10px;
+    z-index: 1000;
+}
+
+.dropdown-item {
+    padding: 10px 15px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.dropdown-item:hover {
+    background-color: var(--icon-color);
+    border-radius: 5px;
+}
+
+.dropdown-icon {
+    margin-right: 10px;
+}
+
+.dropdown-item.delete {
+    color: red;
+}
+
+.dropdown-item.delete:hover {
+    background-color: #f8d7da;
+}
