--- a/application/web/style/entry.css
+++ b/application/web/style/entry.css
@@ -72,6 +72,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 #no-entry-text, .no-entry-text {
